# Ocaml-WM

./: .gitignore  LICENSE  dune-project  flake.nix  ocaml-wm.opam
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 18mbkmd7vxmnzzphy9sdr76h1b2c150h-source  jr904wbcrjga8wm62di69ayykv651bgj-source  y4f05v0fsyx2yf1cnz56ksiz0zy49wda-source  z718q769g67cb92abd3z7dk1rkk7mxl8-source
lib/: dune  version.ml
test/: dune
